@@ -13,6 +13,9 @@ SYNCHRONIZE
 - Added --nodelete option that keeps items on the destination that have been
   removed from the source. This is similar to --keepfiles except that files
   may still be reverted with the --nodelete option.
+- Added --noprogress option that prevents progress messages from being 
+  printed to the console, for cases where these messages pollute log files.
+  This option is similar to --quiet, except the action report is printed.
 - Added property setting to ignore missing source directories when uploading.
 - Progress status messages shortened to fit into 80 character width consoles.
 
